se sube el componenete de Transaccion

--- a/TP-FRONTEND/src/app/components/header/header.component.html
+++ b/TP-FRONTEND/src/app/components/header/header.component.html
@@ -31,16 +31,16 @@
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/horoscopo" routerLinkActive="active-link"><i class="bi bi-brightness-alt-high-fill"></i><b> Horoscopo</b></a>
+            <a class="nav-link" routerLink="/form-transaccion" routerLinkActive="active-link"><i class="bi bi-brightness-alt-high-fill"></i><b> Transaccion</b></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/audio" routerLinkActive="active-link"><i class="bi bi-filetype-mp3"></i><b> Texto/Audio</b></a>
+            <a class="nav-link" routerLink="/transacciones" routerLinkActive="active-link"><i class="bi bi-filetype-mp3"></i><b> Lista Transacciones</b></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/practica" routerLinkActive="active-link"><i class="bi bi-filetype-mp3"></i><b> Practica</b></a>
+            <a class="nav-link" routerLink="/form-ticket" routerLinkActive="active-link"><i class="bi bi-filetype-mp3"></i><b> Agregar Ticket</b></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/examen" routerLinkActive="active-link"><i class="bi bi-filetype-mp3"></i><b> Examen</b></a>
+            <a class="nav-link" routerLink="/tickets" routerLinkActive="active-link"><i class="bi bi-filetype-mp3"></i><b> Tickets</b></a>
           </li>
         </ul>
       </div>
