--- a/TP-FRONTEND/src/app/components/form-productos/form-productos.component.html
+++ b/TP-FRONTEND/src/app/components/form-productos/form-productos.component.html
@@ -31,7 +31,7 @@
             </div>
             <div class="mb-3">
               <label for="imagen" class="form-label">Imagen</label>
-              <input type="text" class="form-control" id="imagen" name="imagen" [(ngModel)]="producto.imagen" required #imagen="ngModel">
+              <input type="text" class="form-control" id="imagen" name="imagen" placeholder="imgrese url de imagen" [(ngModel)]="producto.imagen" required #imagen="ngModel">
               <div *ngIf="imagen.invalid && ( imagen.dirty || imagen.touched)" class="alert alert-danger">
                 <div *ngIf="imagen.errors?.['required']">
                      Debe ingresar URL de imagen
