--- a/TP-FRONTEND/src/app/components/list-productos/list-productos.component.css
+++ b/TP-FRONTEND/src/app/components/list-productos/list-productos.component.css
@@ -1,7 +1,11 @@
 #carouselExampleIndicators{
     margin-left: 200px;
     margin-right: 200px;
-    background-color: rgb(16, 16, 153);
+    padding-top: 10px;
+    padding-bottom: 10px;
+    background-image: url('../../../assets/image/sale.jpg');
+    background-repeat: no-repeat;
+    background-size: 100%;
    
 }
 
@@ -10,3 +14,19 @@
     background-color: rgb(46, 44, 44);
     padding-bottom: 20px;
 }
+
+custom-carousel .carousel-inner{
+    transition-duration: 4s;
+}
+.card{
+    padding: 1px;
+   border: 3px solid rgb(103, 14, 206);
+   background-color: rgb(102, 153, 247);
+}
+.card:hover{
+    padding: 1px;
+   border: 3px solid rgb(220, 227, 9);
+   color: white;
+   /*background-image: url("../../../assets/imagenes/musi.jpg");*/
+}
+
