--- a/TP-FRONTEND/src/app/components/header/header.component.html
+++ b/TP-FRONTEND/src/app/components/header/header.component.html
@@ -37,7 +37,7 @@
             <a class="nav-link" routerLink="/transacciones" routerLinkActive="active-link"><i class="bi bi-filetype-mp3"></i><b> Lista Transacciones</b></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/form-ticket" routerLinkActive="active-link"><i class="bi bi-filetype-mp3"></i><b> Agregar Ticket</b></a>
+            <a class="nav-link" routerLink="/form-ticket/0" routerLinkActive="active-link"><i class="bi bi-filetype-mp3"></i><b> Agregar Ticket</b></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" routerLink="/tickets" routerLinkActive="active-link"><i class="bi bi-filetype-mp3"></i><b> Tickets</b></a>
